updated AEO nav item label

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -89,7 +89,7 @@ nav:
       - Team Management: team-management.md
   - Content Features:
       - SEO Content Briefs: features/content-briefs.md
-      - AEO Optimization: features/aeo-optimization.md
+      - AI Search Optimization: features/aeo-optimization.md
       - Versus Pages: features/versus-pages.md
       - FAQ Generator: features/faq-generator.md
       - Key Points Extractor: features/key-points.md
